--- a/anonphobease-backend/src/main/resources/application-docker.properties
+++ b/anonphobease-backend/src/main/resources/application-docker.properties
@@ -7,5 +7,6 @@ spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 # JWT
 jwt.secret=${JWT_SECRET}
 # Captcha
-captcha.secret.key=${CAPTCHA_SECRET_KEY}
+captcha.secret-key=${CAPTCHA_SECRET_KEY}
 # Encryption
+app.crypto.secret=${APP_CRYPTO_SECRET}
